Fix width of beer style guide labels
The field labels on the recipe editing page were too wide and spilling
to the next line. This fixes them to a shorter width in the editing page
and still gives them space to breath on the recipe show page

--- a/app/assets/stylesheets/recipes.scss
+++ b/app/assets/stylesheets/recipes.scss
@@ -29,13 +29,18 @@ form.edit_recipe, form.new_recipe {
 
   strong {
     display: inline-block;
-    width: 140px;
+    width: 90px;
   }
 }
 
 .beer-profile {
   font-size: 1.1em;
 
+  .style-guide, .recipe-profile {
+    strong {
+      width: 140px;
+    }
+  }
   .style-guide div, .recipe-profile div {
     padding-left: 15px;
   }
